--- a/ui/package.json
+++ b/ui/package.json
@@ -13,16 +13,70 @@
   "author": "Caleb Doxsey <caleb@doxsey.net>",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^15.0.34",
+    "@types/bytebuffer": "^5.0.33",
+    "@types/classnames": "^2.2.0",
+    "@types/combokeys": "^2.4.5",
+    "@types/fetch-mock": "^5.8.1",
+    "@types/highlight.js": "^9.1.9",
+    "@types/lodash": "^4.14.56",
+    "@types/mocha": "^2.2.40",
+    "@types/prop-types": "^15.5.1",
+    "@types/react": "^15.0.18",
+    "@types/react-codemirror": "^0.2.6",
     "@types/react-dom": "^15.5.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  },
-  "devDependencies": {
-    "awesome-typescript-loader": "^3.2.1",
-    "source-map-loader": "^0.2.1",
+    "@types/react-paginate": "^4.3.1",
+    "@types/react-redux": "^4.4.38",
+    "@types/react-router": "^4.0.12",
+    "@types/react-router-redux": "^5.0.3",
+    "@types/react-select": "^1.0.45",
+    "@types/react-sticky": "^5.0.1",
+    "@types/redux-thunk": "^2.1.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-react": "^6.23.0",
+    "bytebuffer": "^5.0.1",
+    "classnames": "^2.2.5",
+    "codemirror": "^5.25.2",
+    "combokeys": "^2.4.6",
+    "css-loader": "^0.28.0",
+    "fetch-mock": "^5.9.4",
+    "file-loader": "^0.11.1",
+    "highlight.js": "^9.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "idb": "^2.0.3",
+    "jsdom": "^11.0.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
+    "protobufjs": "^6.7.3",
+    "react": "^15.4.2",
+    "react-addons-create-fragment": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-codemirror": "^1.0.0",
+    "react-dom": "^15.4.2",
+    "react-paginate": "^4.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^4.1.1",
+    "react-router-redux": "<5.0.0",
+    "react-select": "^1.0.0-rc.4",
+    "react-sticky": "^6.0.1",
+    "react-test-renderer": "^15.5.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0",
+    "rimraf": "^2.6.1",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.18.2",
+    "stylint": "^1.5.9",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "ts-loader": "^2.0.3",
+    "tslint": "^5.1.0",
     "typescript": "^2.4.1",
+    "url-loader": "^0.5.8",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-middleware": "^1.10.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
