--- a/ui/package.json
+++ b/ui/package.json
@@ -63,6 +63,7 @@
     "react-sticky": "^6.0.1",
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
+    "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "rimraf": "^2.6.1",
