--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "lib": ["es2017"],
+    "lib": ["dom", "es6"],
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
