--- a/ui/package.json
+++ b/ui/package.json
@@ -26,11 +26,11 @@
     "@types/react-dom": "^15.5.1",
     "@types/react-paginate": "^4.3.1",
     "@types/react-redux": "^4.4.38",
-    "@types/react-router": "^4.0.12",
-    "@types/react-router-redux": "^5.0.3",
+    "@types/react-router": "<4.0.0",
+    "@types/react-router-redux": "<5.0.0",
     "@types/react-select": "^1.0.45",
     "@types/react-sticky": "^5.0.1",
-    "@types/redux-thunk": "^2.1.0",
+    "@types/redux-form": "^6.6.8",
     "babel-core": "^6.24.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.2.2",
@@ -57,7 +57,7 @@
     "react-dom": "^15.4.2",
     "react-paginate": "^4.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^4.1.1",
+    "react-router": "<4.0.0",
     "react-router-redux": "<5.0.0",
     "react-select": "^1.0.0-rc.4",
     "react-sticky": "^6.0.1",
