--- a/ui/package.json
+++ b/ui/package.json
@@ -1,16 +1,33 @@
 {
-  "name": "ui",
-  "version": "1.0.0",
-  "description": "",
+  "name": "badgerodon-simulator-ui",
+  "version": "0.1.0",
+  "description": "ui for the badgerodon simulator",
   "main": "index.js",
   "dependencies": {
+    "bulma": "^0.5.1",
+    "css-loader": "^0.28.4",
     "github-api": "^3.0.0",
-    "monaco-editor": "^0.9.0"
+    "gopherjs-loader": "0.0.1",
+    "html-webpack-plugin": "^2.30.1",
+    "monaco-editor": "^0.9.0",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
+    "xterm": "^2.9.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "html-webpack-inline-source-plugin": "0.0.9"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Caleb Doxsey",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/badgerodon/simulator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/badgerodon/simulator/issues"
+  },
+  "homepage": "https://github.com/badgerodon/simulator#readme"
 }
